--- a/GUI/BudgetsWPF/MainView.xaml
+++ b/GUI/BudgetsWPF/MainView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:AV.ProgrammingWithCSharp.Budgets.GUI.WPF"
              xmlns:wallets="clr-namespace:AV.ProgrammingWithCSharp.Budgets.GUI.WPF.Wallets"
              xmlns:authentication="clr-namespace:AV.ProgrammingWithCSharp.Budgets.GUI.WPF.Authentication"
+             xmlns:transactions="clr-namespace:AV.ProgrammingWithCSharp.Budgets.GUI.WPF.Transactions"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -14,6 +15,9 @@
         </DataTemplate>
         <DataTemplate DataType="{ x:Type wallets:WalletsViewModel}">
             <wallets:WalletsView></wallets:WalletsView>
+        </DataTemplate>
+        <DataTemplate DataType="{ x:Type transactions:TransactionsViewModel}">
+            <transactions:TransactionsView></transactions:TransactionsView>
         </DataTemplate>
     </UserControl.Resources>
     <ContentControl Content="{Binding CurrentViewModel}"></ContentControl>
