--- a/GUI/BudgetsWPF/Transactions/TransactionsView.xaml
+++ b/GUI/BudgetsWPF/Transactions/TransactionsView.xaml
@@ -27,7 +27,7 @@
         
         <!--Menu-->
         <ListView Grid.RowSpan="2" ItemsSource="{Binding Transactions}" 
-                  DisplayMemberPath="Name" SelectedItem="{Binding CurrentTransaction}" Grid.ColumnSpan="2" Margin="0,0,2,0"></ListView>
+                  DisplayMemberPath="Description" SelectedItem="{Binding CurrentTransaction}" Grid.ColumnSpan="2" Margin="0,0,2,0"></ListView>
 
         <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Margin="0,0,598,0" Grid.RowSpan="2"></GridSplitter>
         <!--Content-->
